# Fractal

./: CMakeLists.txt
main/: CMakeLists.txt  main.cpp
src/: Bitmap.cpp  Bitmap.hpp  BitmapHeader.hpp  BitmapInformation.hpp  CMakeLists.txt  FractalMaker.cpp  FractalMaker.hpp  Mandelbrot.cpp  Mandelbrot.hpp  RGB.cpp  RGB.hpp  Zoom.cpp  Zoom.hpp  ZoomList.cpp  ZoomList.hpp
test/: CMakeLists.txt
test/test_Fractal/: CMakeLists.txt
